support jdk8 java callgraph analysis